[gd_scene load_steps=2 format=3 uid="uid://fn6ewnfcbsdq"]

[ext_resource type="Script" path="res://game_objects/Entities/Infrastructure/infrastructureNode.gd" id="1_cofpu"]

[node name="Infrastructure" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 0
script = ExtResource("1_cofpu")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Name"

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "X"

[node name="DetailsBox" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/DetailsBox"]
layout_mode = 2

[node name="LevelLabel" type="Label" parent="VBoxContainer/DetailsBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Level"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer/DetailsBox"]
layout_mode = 2

[node name="StatusLabel" type="Label" parent="VBoxContainer/DetailsBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Status"

[node name="HSeparator3" type="HSeparator" parent="VBoxContainer/DetailsBox"]
layout_mode = 2

[node name="EffectLabel" type="Label" parent="VBoxContainer/DetailsBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Effect: +3 to penis length per level"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Button" to="." method="_on_button_pressed"]
